--- a/App.config
+++ b/App.config
@@ -1,6 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PACModeS2020New.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <PACModeS2020New.My.MySettings>
+            <setting name="BSloc" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CompactedDBName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="OperatorFlags" serializeAs="String">
+                <value>Kinetic</value>
+            </setting>
+            <setting name="PPSymbols" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BSBackupLoc" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PPSymbolsType" serializeAs="String">
+                <value>v1</value>
+            </setting>
+            <setting name="NewBSLoc" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="RQPsButton" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </PACModeS2020New.My.MySettings>
+    </userSettings>
 </configuration>
