--- a/App.config
+++ b/App.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="PACModeS2020New.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="PACModeS2020.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <userSettings>
-        <PACModeS2020New.My.MySettings>
+        <PACModeS2020.My.MySettings>
             <setting name="BSloc" serializeAs="String">
                 <value />
             </setting>
@@ -37,6 +37,6 @@
             <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
-        </PACModeS2020New.My.MySettings>
+        </PACModeS2020.My.MySettings>
     </userSettings>
 </configuration>
