Added processing to set Interested = True for all RQ or Ps

--- a/App.config
+++ b/App.config
@@ -37,6 +37,9 @@
             <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="RQPsandIButton" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PACModeS2020New.My.MySettings>
     </userSettings>
 </configuration>
