Processing for setting interested for all RQ/Ps and Null or '-' values in OperatorFlagCode set to ICAOTypeCode

--- a/App.config
+++ b/App.config
@@ -40,6 +40,9 @@
             <setting name="RQPsandIButton" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="NullOpFlags" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PACModeS2020New.My.MySettings>
     </userSettings>
 </configuration>
