--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="RQPsandIButton" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="NullOpFlags" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
