--- a/PACModeS2020.vbproj
+++ b/PACModeS2020.vbproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Debug\x86\1.0.0.23\</OutputPath>
+    <OutputPath>bin\Debug\x86\1.0.0.24\</OutputPath>
     <DocumentationFile>PACModeS2020.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -32,7 +32,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\x86\1.0.0.23\</OutputPath>
+    <OutputPath>bin\Release\x86\1.0.0.24\</OutputPath>
     <DocumentationFile>PACModeS2020.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="PacModeS2020.ico" />
+    <Content Include="PACModeS2020_changelog.htm" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Import Project="packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.113.3\build\net45\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.113.3\build\net45\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
