Changed version number for logged.mdb on PACModeS2020version.txt

--- a/PACModeS2020.vbproj
+++ b/PACModeS2020.vbproj
@@ -163,6 +163,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="PacModeS2020.ico" />
+    <Content Include="PACModeS2020version.txt" />
+    <Content Include="PACModeS2020Version.xml" />
     <Content Include="PACModeS2020_changelog.htm" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
